--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ include(CMakeDependentOption)
 #set(CMAKE_CXX_COMPILER clang++)
 set(CMAKE_CXX_COMPILER g++)
 
-add_definitions(-std=c++11 -march=native -g)
+add_definitions(-std=c++11 -march=native -g -fPIC)
 add_definitions(-Wall -Wextra -pedantic -Wsign-conversion -Wold-style-cast)
 add_definitions(-Wno-unused-function -Wno-nested-anon-types -Wno-keyword-macro)
 
