Added -fPIC flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ include(CMakeDependentOption)
 #set(CMAKE_CXX_COMPILER clang++)
 set(CMAKE_CXX_COMPILER g++)
 
-add_definitions(-std=c++11 -march=native)
+add_definitions(-std=c++11 -march=native -fPIC)
 add_definitions(-Wall -Wextra -Werror -pedantic -Wsign-conversion)
 add_definitions(-Wno-unused-function -Wno-nested-anon-types 
   -Wno-keyword-macro -Wno-deprecated-declarations -Wno-address-of-packed-member)
